CCD-3669: Replacing SQL based search with Elastic Search (#23)
* CCD-3669: Replacing SQL based search with Elastic Search

* CCD-3669: Replacing SQL based search with Elastic Search

* CCD-3669: ignore test case quality gate

* CCD-3669: added Case Migration service back

* CCD-3669: modified elastic search query to fetch all cases as this is a template

* CCD-3669: Logging added and improved migration behaviour

* CCD-3669: Test cases addressed

* CCD-3669: Test cases added

* CCD-3669: Exclude test cases

* CCD-3669: Exclude test cases

* CCD-3669: Remove unused imports

* CCD-3669: code smells addressed

* CCD-3669: test cases updated

* CCD-3669: removed exclusions

* CCD-3669: sonar for sub projects

* CCD-3669: sonar for sub projects removed

* CCD-3669: sonar test and src properties added

* CCD-3669: addressed review comments

* CCD-3669: sonarqube report generation

* CCD-3669: sonarqube report generation

* CCD-3669: Optimized imports

* Temporary add sonar.exclusions and sonar.coverage.exclusions

* Temporary change to build.gradle

* Revert temporary changes

* CCD-3669: removed modules

* CCD-3669: Fixed build issues and checkstyle issues

* CCD-3669: Fixed build issues

* CCD-3669: Fixed build issues

* CCD-3669: Fixed build issues

* CCD-3669: fixed test case issues

* CCD-3669: ignore domain classes from code coverage

* CCD-3669: ignore domain classes from code coverage

* CCD-3669: code smell issues addressed

* CCD-3669: code smell issues addressed

* CCD-3669: generate jar file

* CCD-3669: generate jar file

* CCD-3669: generate jar file

* CCD-3669:fixed issue with main class

* CCD-3669:fixed issue with class not found error

* CCD-3669: validate case type

* Ccd 3667: CVE Issues (#29)

* CCD-3667: Remove suppressions

* CCD-3667: Remove suppressions

* CCD-3667: address CVE issues

Co-authored-by: Kiran Yenigala <kiran.yenigala@nihr.ac.uk>

* Add Fortify