@@ -1,13 +1,16 @@
 plugins {
   id 'application'
   id 'checkstyle'
-  id 'pmd'
   id 'jacoco'
+  id 'java'
+  id "io.freefair.lombok" version "6.5.1"
   id 'io.spring.dependency-management' version '1.0.13.RELEASE'
-  id 'org.springframework.boot' version '2.3.12.RELEASE'
+  id 'org.springframework.boot' version '2.7.3'
   id 'org.owasp.dependencycheck' version '6.5.3'
+  id 'com.github.kt3k.coveralls' version '2.8.2'
   id 'com.github.ben-manes.versions' version '0.42.0'
   id 'org.sonarqube' version '3.4.0.2513'
+  id 'uk.gov.hmcts.java' version '0.12.0'
   id "com.jfrog.bintray" version "1.8.5" apply false
 }
 
@@ -96,6 +99,13 @@ task integration(type: Test) {
   failFast = true
 }
 
+task fortifyScan(type: JavaExec)  {
+  main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+  classpath += sourceSets.test.runtimeClasspath
+  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
+  ignoreExitValue = true
+}
+
 task smoke(type: Test) {
   description = "Runs Smoke Tests"
   testClassesDirs = sourceSets.smokeTest.output.classesDirs
@@ -106,15 +116,6 @@ checkstyle {
   maxWarnings = 0
   toolVersion = '9.2.1'
   getConfigDirectory().set(new File(rootDir, 'config/checkstyle'))
-}
-
-pmd {
-  toolVersion = "6.41.0"
-  sourceSets = [sourceSets.main, sourceSets.test, sourceSets.functionalTest, sourceSets.integrationTest, sourceSets.smokeTest]
-  reportsDir = file("$project.buildDir/reports/pmd")
-  // https://github.com/pmd/pmd/issues/876
-  ruleSets = []
-  ruleSetFiles = files("config/pmd/ruleset.xml")
 }
 
 jacocoTestReport {
@@ -133,7 +134,7 @@ sonarqube {
   properties {
     property "sonar.projectName", "ccd-case-migration-starter"
     property "sonar.projectKey", "ccd-case-migration-starter"
-    property "sonar.exclusions", "**/service/*.java,**/DataMigrationServiceImpl.java"
+    property "sonar.exclusions", "**/exception/*.java,**/domain/*.java,**/common/*.java,**/migration/auth/AuthTokenGeneratorConfiguration.java,**/migration/CaseMigrationRunner.java,**/ccd/HttpMessageConverterConfiguration.java"
     property "sonar.coverage.jacoco.xmlReportPaths", "${jacocoTestReport.reports.xml.destination.path}"
   }
 }
@@ -164,7 +165,6 @@ dependencyCheck {
   skipConfigurations = [
     "checkstyle",
     "compileOnly",
-    "pmd",
     "integrationTest",
     "functionalTest",
     "smokeTest",
@@ -182,16 +182,32 @@ repositories {
 
 ext {
   log4JVersion = "2.17.0"
+  restAssuredVersion = '4.3.0!!'
+  lombokVersion = "1.18.16"
+  junit_version = "4.12"
+  junitJupiterVersion = '5.7.1'
+  junitVintageVersion = '5.7.1'
+  powermockVersion = '2.0.7'
+  springSecurity   =  '5.7.1'
+  springCloudVersion = '2021.0.3'
 }
 
-ext['snakeyaml.version'] = '1.31'
+ext['jackson.version'] = '2.14.0-rc1'
+ext['snakeyaml.version'] = '1.33'
 ext['spring-security.version'] = '5.7.3'
 
 dependencies {
-  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web'
+  implementation("org.springframework.cloud:spring-cloud-starter-bootstrap")
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator'
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-aop'
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-json'
+  implementation group: 'org.springframework', name: 'spring-context-support'
+  implementation group: 'uk.gov.hmcts.reform', name: 'idam-client', version: '1.0.2'
+  implementation group: 'uk.gov.hmcts.reform', name: 'service-auth-provider-client', version: '3.0.0'
+  implementation group: 'uk.gov.hmcts.reform', name: 'core-case-data-store-client', version: '4.7.3'
+
+  testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test'
+  testImplementation group: 'com.github.tomakehurst', name: 'wiremock', version: '2.23.2'
 
   implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: '1.6.11'
 
@@ -199,112 +215,104 @@ dependencies {
 
   implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: log4JVersion
   implementation group: 'org.apache.logging.log4j', name: 'log4j-to-slf4j', version: log4JVersion
+  testImplementation group: 'io.rest-assured', name: 'rest-assured', version: '4.3.0'
 
-  implementation group: 'io.rest-assured', name: 'rest-assured'
+  testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test'
 
-  testImplementation(platform('org.junit:junit-bom:5.9.0'))
-  testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
-  testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', {
-    exclude group: 'junit', module: 'junit'
-    exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+  testImplementation('org.junit.jupiter:junit-jupiter:5.6.0')
+  testImplementation "org.junit.jupiter:junit-jupiter-api:${junitJupiterVersion}"
+  testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${junitJupiterVersion}"
+  testRuntimeOnly "org.junit.vintage:junit-vintage-engine:${junitVintageVersion}"
+  testImplementation group:'org.mockito', name: 'mockito-junit-jupiter', version:'3.6.0'
+  testImplementation group: 'org.powermock', name: 'powermock-api-mockito2', version: powermockVersion
+  testImplementation group: 'org.powermock', name: 'powermock-module-junit4', version: powermockVersion
+  testRuntimeOnly "org.junit.platform:junit-platform-commons:1.7.0"
+  implementation group: 'org.projectlombok', name: 'lombok', version: lombokVersion
+  annotationProcessor group: 'org.projectlombok', name: 'lombok', version: lombokVersion
+  testAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: lombokVersion
+
+  testImplementation 'com.github.hmcts:fortify-client:1.2.2:all'
+
+  implementation group: 'commons-io', name: 'commons-io', version: '2.8.0'
+  implementation group: 'org.springframework.security', name: 'spring-security-oauth2-resource-server', version: springSecurity
+  implementation group: 'org.springframework.security', name: 'spring-security-oauth2-client', version: springSecurity
+  implementation group: 'org.springframework.security', name: 'spring-security-oauth2-jose', version: springSecurity
+  implementation group: 'org.springframework.security', name: 'spring-security-oauth2-core', version: springSecurity
+  implementation group: 'org.springframework.security', name: 'spring-security-config', version: springSecurity
+}
+
+dependencyManagement {
+  imports {
+    mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
   }
 
-  implementation project('modules:domain')
-  implementation project('modules:processor')
+  dependencies {
+    dependency 'com.google.guava:guava:30.1-jre'
+
+    dependencySet(group: 'commons-beanutils', version: '1.9.4') {
+      entry 'commons-beanutils'
+    }
+
+    dependencySet(group: 'io.rest-assured', version: '4.3.0') {
+      entry 'json-path'
+      entry 'xml-path'
+    }
+    dependencySet(group: 'org.codehaus.groovy', version: '3.0.2') {
+      entry 'groovy'
+      entry 'groovy-xml'
+      entry 'groovy-json'
+    }
+  }
 }
 
 mainClassName = 'uk.gov.hmcts.reform.migration.CaseMigrationRunner'
 
 bootJar {
-  archiveFileName = "ccd-migration.jar"
-
-  manifest {
-    attributes('Implementation-Version': project.version.toString())
-  }
-}
-
-// Gradle 7.x issue, workaround from: https://github.com/gradle/gradle/issues/17236#issuecomment-894768083
-rootProject.tasks.named("processSmokeTestResources") {
-  duplicatesStrategy = 'include'
+  archiveFileName = 'ccd-case-migration.jar'
+  archiveBaseName = 'ccd-case-migration'
+  archiveVersion = project.version.toString()
 }
 
 wrapper {
     distributionType = Wrapper.DistributionType.ALL
 }
 
-subprojects {
-  apply plugin: 'java'
-  apply plugin: 'maven-publish'
-  apply plugin: 'io.spring.dependency-management'
-  apply plugin: 'com.jfrog.bintray'
+configurations.all {
+  exclude group: 'org.bouncycastle', module: 'bcprov-jdk15on'
+  exclude group: 'org.springframework.boot', module: 'spring-boot-starter-security'
+  exclude group: 'org.springframework.security', module: 'spring-security-rsa'
+}
 
-  group = 'uk.gov.hmcts.reform.ccd-case-migration'
-  version = '3.0.0'
+test {
+  timeout = Duration.ofMinutes(30)
+  environment("AZURE_APPLICATIONINSIGHTS_INSTRUMENTATIONKEY", "some-key")
+  systemProperty 'java.locale.providers', 'COMPAT'
 
-  sourceCompatibility = '11'
-  targetCompatibility = '11'
+  useJUnitPlatform()
 
-  compileJava {
-    options.compilerArgs << '-parameters' << '-Xlint:deprecation'
-  }
+  testLogging {
+    events "failed"
+    exceptionFormat "short"
 
-  compileTestJava {
-    options.compilerArgs << '-Xlint:deprecation'
-  }
-
-  repositories {
-    mavenLocal()
-    mavenCentral()
-    jcenter()
-
-    maven { url "https://dl.bintray.com/hmcts/hmcts-maven" }
-    maven { url "https://repo.maven.apache.org/maven2" }
-  }
-
-  dependencyManagement {
-    imports {
-      mavenBom org.springframework.boot.gradle.plugin.SpringBootPlugin.BOM_COORDINATES
-      mavenBom "org.springframework.cloud:spring-cloud-starter-parent:Hoxton.SR10"
+    debug {
+      events "passed", "started", "skipped", "failed"
+      exceptionFormat "full"
     }
+
+    info.events = ["failed", "skipped"]
   }
 
-  def versions = [
-    lombok: '1.18.8'
+  reports {
+    html.enabled = true
+  }
+
+  jvmArgs = [
+    '--add-modules', 'java.se',
+    '--add-exports', 'java.base/jdk.internal.ref=ALL-UNNAMED',
+    '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
+    '--add-opens', 'java.base/java.nio=ALL-UNNAMED',
+    '--add-opens', 'java.base/sun.nio.ch=ALL-UNNAMED',
+    '--add-opens', 'java.management/sun.management=ALL-UNNAMED',
+    '--add-opens', 'jdk.management/com.sun.management.internal=ALL-UNNAMED'
   ]
-
-  dependencies {
-    annotationProcessor group: 'org.projectlombok', name: 'lombok', version: versions.lombok
-    compileOnly group: 'org.projectlombok', name: 'lombok', version: versions.lombok
-  }
-
-  task sourcesJar(type: Jar, dependsOn: classes) {
-    classifier = 'sources'
-    from sourceSets.main.allSource
-  }
-
-  publishing {
-    publications {
-      maven(MavenPublication) {
-        from components.java
-        artifact sourcesJar
-      }
-    }
-  }
-
-  bintray {
-    user = System.getenv('BINTRAY_USER')
-    key = System.getenv('BINTRAY_KEY')
-    publications = ['maven']
-    publish = true
-    pkg {
-      repo = 'hmcts-maven'
-      name = 'ccd-case-migration-starter'
-      userOrg = 'hmcts'
-      licenses = ['MIT']
-      vcsUrl = 'https://github.com/hmcts/ccd-case-migration-starter'
-      version {
-        name = project.version
-      }
-    }
-  }
 }
